Fix path issue with css project

--- a/skeleton/assets/style_css.css
+++ b/skeleton/assets/style_css.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Arial, san-serif;
-  background-color: blue 
+  font-family: Arial san-serif;
+  background-color: blue; 
 }
 h1 {
   font-size: 38px; 
